--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,42 +127,42 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-
-    <% if @items.length != [0] %>
-
-      <% @items.each do |item| %>
-       <li class='list'>
-        <%# それぞれの商品に紐づくパスを指定 %>
-        <%= link_to "#" do %>
-        <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" %>
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
-        </div>
-        <% end %>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            <%= item.name %>
-          </h3>
-          <div class='item-price'>
-            <span><%= item.price %>円<br><%= '配送料負担込み' %></span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
-            </div>
-          </div>
+    <% if @items.length != 0 %>
+       <% @items.each do |item| %>
+        <li class='list'>
+         <%# それぞれの商品に紐づくパスを指定 %>
+         <%= link_to "#" do %>
+         <div class='item-img-content'>
+           <%= image_tag item.image, class: "item-img" %>
+           <%# 商品が売れていればsold outを表示しましょう %>
+           <div class='sold-out'>
+             <span>Sold Out!!</span>
+           </div>
+           <%# //商品が売れていればsold outを表示しましょう %>
          </div>
-       </li>
-     <% end %>
-
+         <% end %>
+         <div class='item-info'>
+           <h3 class='item-name'>
+             <%= item.name %>
+           </h3>
+           <div class='item-price'>
+             <span><%= item.price %>円<br><%= item.delivery_fee_id %></span>
+             <div class='star-btn'>
+               <%= image_tag "star.png", class:"star-icon" %>
+               <span class='star-count'>0</span>
+             </div>
+           </div>
+          </div>
+        </li>
+      <% end %>
     <% end %>
 
+      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      
 
-
-    <% if @items.length == [0] %>
+      <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      <%# 商品がある場合は表示されないようにしましょう %>
+   <% if @items.length == 0 %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://www.nta.co.jp/media/tripa/static_contents/nta-tripa/item_images/images/000/050/861/medium/f4ce5f8a-d42f-472c-92af-0e02f253d7a7.png?1550666388", class: "item-img" %>
@@ -181,8 +181,8 @@
         <% end %>
       </li>
     <% end %>
-    
-
+      <%# //商品がある場合は表示されないようにしましょう %>
+      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
   </div>
   <%# /商品一覧 %>
