--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
        <% @items.each do |item| %>
         <li class='list'>
          <%# それぞれの商品に紐づくパスを指定 %>
-         <%= link_to "#" do %>
+         <%= link_to item_path(item.id), method: :get do %>
          <div class='item-img-content'>
            <%= image_tag item.image, class: "item-img" %>
            <%# 商品が売れていればsold outを表示しましょう %>
@@ -146,7 +146,7 @@
              <%= item.name %>
            </h3>
            <div class='item-price'>
-             <span><%= item.price %>円<br><%= item.delivery_fee_id %></span>
+             <span><%= item.price %>円<br><%= item.delivery_fee.name %></span>
              <div class='star-btn'>
                <%= image_tag "star.png", class:"star-icon" %>
                <span class='star-count'>0</span>
