--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,8 +135,10 @@
          <div class='item-img-content'>
            <%= image_tag item.image, class: "item-img" %>
            <%# 商品が売れていればsold outを表示しましょう %>
+           <% if item.purchase.present? %>
            <div class='sold-out'>
              <span>Sold Out!!</span>
+            <% end %>
            </div>
            <%# //商品が売れていればsold outを表示しましょう %>
          </div>
