サンプル画像リンクの訂正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -167,7 +167,7 @@
    <% if @items.length == 0 %>
       <li class='list'>
         <%= link_to '#' do %>
-        <%= image_tag "https://www.nta.co.jp/media/tripa/static_contents/nta-tripa/item_images/images/000/050/861/medium/f4ce5f8a-d42f-472c-92af-0e02f253d7a7.png?1550666388", class: "item-img" %>
+        <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
         <div class='item-info'>
           <h3 class='item-name'>
             商品を出品してね！
